--- a/environments/environment.yml
+++ b/environments/environment.yml
@@ -4,10 +4,10 @@ channels:
 - defaults
 dependencies:
 - python=3.8
-- conda-forge::gdal>=3.1
 - conda-forge::ipython
 - conda-forge::ipykernel
-- conda-forge::libgdal>=3.1
+- conda-forge::geopandas # let geopandas and rasterio sort their own dependencies with gdal and pyproj
+- conda-forge::rasterio
 - pip
 - pip:
   # PYTORCH ECOSYSTEM
@@ -19,8 +19,6 @@ dependencies:
   - seaborn
   - scipy
   - pandas
-  - rasterio
-  - geopandas
   - fastprogress
   - tqdm
   - black
